--- a/index.html
+++ b/index.html
@@ -165,9 +165,15 @@
             </div>
             
             <div class="current-project">
-                <div class="project-label">Current Focus (aglo)</div>
-                <h3>Advanced Algorithm Development</h3>
-                <p>Currently working on building a sophisticated algorithm to optimize data processing and enhance user experience across multiple platforms. This project combines complex data structures with machine learning principles to create an adaptive solution.</p>
+                <div class="project-label">Current Focus (Chatz)</div>
+                <h3>AI-Native Chat Platform Development</h3>
+                <p>Building Chatz — a next-gen conversational platform designed for fast, intelligent, and engaging interactions. This MVP leverages Retrieval-Augmented Generation (RAG) and Qdrant for high-speed, context-aware chatting, integrates natural-feeling chat-to-chat flows, and features hyper-realistic text-to-speech that sounds truly human.</p>
+                <div class="project-cta">
+                    <a href="https://chatz-frontend.onrender.com/" target="_blank" rel="noopener" class="btn btn-primary">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Project
+                    </a>
+                </div>
             </div>
         </section>
 
