🔥 minor c ⚡ ss fix  ✨

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </section>
 
         <!-- TabZen project section -->
-        <section class="featured-project">
+        <section class="current-project">
             <div class="project-label">Featured Project</div>
             <h3>TabZen - Smart Tab Management</h3>
             <p>A powerful Chrome extension that revolutionizes how you manage browser tabs. TabZen combines intelligent organization with a sleek interface to make tab management effortless and efficient.</p>
