Minor chnages to porrtfolio

--- a/index.html
+++ b/index.html
@@ -111,9 +111,22 @@
             </div>
         </section>
 
-        <!-- current project section -->
+                <!-- current project section -->
         <section class="current-project">
-            <div class="project-label">Current Focus</div>
+            <div class="project-label">Current Focus  (Still in development phase)</div>
+            <h3>Keep-Alive</h3>
+            <p>KeepLink is a web-based tool that prevents your iPhone hotspot from automatically disconnecting by maintaining minimal, intelligent network activity. No more frustrating disconnections when you're just not actively browsing!</p>
+            <div class="project-cta">
+                <a href="https://github.com/1JOAT/keepalive" target="_blank" rel="noopener" class="btn btn-primary">
+                    <i class="fas fa-external-link-alt"></i>
+                    View On Github
+                </a>
+            </div>
+        </section>
+
+        <!-- Chatz project section -->
+        <section class="current-project">
+            <div class="project-label">Featured Project</div>
             <h3>AI-Native Chat Platform Development</h3>
             <p>Building Chatz — a next-gen conversational platform designed for fast, intelligent, and engaging interactions. This MVP leverages Retrieval-Augmented Generation (RAG) and Qdrant for high-speed, context-aware chatting, integrates natural-feeling chat-to-chat flows, and features hyper-realistic text-to-speech that sounds truly human.</p>
             <div class="project-cta">
@@ -123,6 +136,10 @@
                 </a>
             </div>
         </section>
+
+
+
+
 
         <!-- TabZen project section -->
         <section class="current-project">
@@ -145,19 +162,42 @@
                     <div class="section-subtitle">My professional journey</div>
                 </div>
             </div>
+
+            
+
+             <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">
+                        <span>May 2025</span>
+                        <span>Present </span>
+
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Software Engineer</h3>
+                        <div class="timeline-company">Marketsmate Enterprise</div>
+                        <p>Contributing to the development of innovative software solutions and collaborating with cross-functional teams to deliver high-quality products.</p>
+                        <div class="timeline-tags">
+                            <span>React</span>
+                            <span>Next.js</span>
+                            <span>TypeScript</span>
+                            <span>Paystack</span>
+                        </div>
+                    </div>
+                </div>
             
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">
                         <span>2023</span>
-                        <span>Present </span>
+                        <span>May 2025 </span>
 
                     </div>
                     <div class="timeline-content">
-                        <h3>Senior Software Developer</h3>
+                        <h3> Software Developer</h3>
                         <div class="timeline-company">Landcraft</div>
-                        <p>Working as a senior developer focusing on building scalable applications and leading development teams. Currently developing an advanced algorithm to optimize user experiences and system performance.</p>
+                        <p>Working as a software developer focusing on building scalable applications and leading development teams. Currently developing an advanced algorithm to optimize user experiences and system performance.</p>
                         <div class="timeline-tags">
                             <span>React</span>
                             <span>Node.js</span>
@@ -211,11 +251,11 @@
                             <span class="stat-label">Years Experience</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-value">12+</span>
+                            <span class="stat-value">15+</span>
                             <span class="stat-label">Projects</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-value">6+</span>
+                            <span class="stat-value">9+</span>
                             <span class="stat-label">Happy Clients</span>
                         </div>
                     </div>
@@ -241,6 +281,10 @@
                         <div class="tech-item">
                             <i class="fab fa-react"></i>
                             <span>React</span>
+                        </div>
+                        <div class="tech-item">
+                            <i class="fab fa-nextjs"></i>
+                            <span>Next.js</span>
                         </div>
                         <div class="tech-item">
                             <i class="fab fa-react"></i>
@@ -295,10 +339,6 @@
                             <span>PHP</span>
                         </div>
                         <div class="tech-item">
-                            <i class="fab fa-laravel"></i>
-                            <span>Laravel</span>
-                        </div>
-                        <div class="tech-item">
                             <i class="fas fa-database"></i>
                             <span>Qdrant</span>
                         </div>
@@ -325,7 +365,7 @@
                         </div>
                         <div class="tech-item">
                             <i class="fas fa-network-wired"></i>
-                            <span>Socket.IO</span>
+                            <span>Socket.Io</span>
                         </div>
                         <div class="tech-item">
                             <i class="fas fa-atom"></i>
