--- a/index.html
+++ b/index.html
@@ -112,17 +112,19 @@
         </section>
 
                 <!-- current project section -->
-        <section class="current-project">
-            <div class="project-label">Current Focus  (Still in development phase)</div>
-            <h3>Keep-Alive</h3>
-            <p>KeepLink is a web-based tool that prevents your iPhone hotspot from automatically disconnecting by maintaining minimal, intelligent network activity. No more frustrating disconnections when you're just not actively browsing!</p>
-            <div class="project-cta">
-                <a href="https://github.com/1JOAT/keepalive" target="_blank" rel="noopener" class="btn btn-primary">
-                    <i class="fas fa-external-link-alt"></i>
-                    View On Github
-                </a>
-            </div>
-        </section>
+            <!-- EtherLens project section -->
+            <section class="current-project">
+                <div class="project-label">Featured Project</div>
+                <h3>Web3 Smart Wallet Analytics Platform</h3>
+                <p>Built EtherLens — a platform that transforms raw on-chain data into clear, digestible insights for everyday users and traders. It simplifies complex blockchain jargon, delivers real-time wallet analytics in milliseconds, and provides actionable metrics that actually make sense.</p>
+                <div class="project-cta">
+                    <a href="https://the-ether-lens.vercel.app/" target="_blank" rel="noopener" class="btn btn-primary">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Project
+                    </a>
+                </div>
+            </section>
+
 
         <!-- Chatz project section -->
         <section class="current-project">
@@ -136,10 +138,6 @@
                 </a>
             </div>
         </section>
-
-
-
-
 
         <!-- TabZen project section -->
         <section class="current-project">
