--- a/index.html
+++ b/index.html
@@ -415,6 +415,9 @@
                         <a href="https://wa.link/875c39" target="_blank" rel="noopener" class="social-link" aria-label="Whatsapp">
                             <i class="fab fa-whatsapp"></i>
                         </a>
+                        <a href="https://www.linkedin.com/in/praise-oke-673a7823a/" target="_blank" rel="noopener" class="social-link" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -440,6 +443,7 @@
                     <a href="https://github.com/1JOAT" target="_blank" rel="noopener" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://x.com/1J0AT" target="_blank" rel="noopener" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                     <a href="https://wa.link/875c39" target="_blank" rel="noopener" aria-label="Whatsapp"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.linkedin.com/in/praise-oke-673a7823a/" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="footer-bottom">
