--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praise Oke | Developer</title>
-    <meta name="description" content="Praise Oke - Full Stack Developer specializing in modern web technologies">
-    <link rel="icon" type="image/png" href="https://fav.farm/🚀" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Title optimized for SEO -->
+  <title>Praise Oke | Full-Stack Web & Mobile Developer</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Portfolio of Praise Oke — Full-Stack Developer specializing in React, Next.js, Node.js, React Native, and scalable web & mobile solutions.">
+
+  <!-- Keywords for SEO -->
+  <meta name="keywords" content="Praise Oke, Full Stack Developer, Web Developer, Mobile Developer, React, Next.js, Node.js, React Native, Nigeria Software Engineer, Portfolio, JavaScript, TypeScript">
+
+  <!-- Open Graph for social preview -->
+  <meta property="og:title" content="Praise Oke | Full-Stack Web & Mobile Developer">
+  <meta property="og:description" content="Explore the portfolio of Praise Oke, a Full-Stack Developer experienced in building modern web and mobile applications with React, Next.js, and Node.js.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://joat.onrender.com/">
+  <meta property="og:image" content="https://joat.onrender.com/preview.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Praise Oke | Full-Stack Web & Mobile Developer">
+  <meta name="twitter:description" content="Full-Stack Developer specializing in React, Next.js, Node.js, and React Native. Check out my portfolio.">
+  <meta name="twitter:image" content="https://joat.onrender.com/preview.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://fav.farm/🚀" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Schema Markup for Personal Website -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Praise Oke",
+    "url": "https://joat.onrender.com/",
+    "sameAs": [
+      "https://github.com/1JOAT",
+      "https://x.com/1J0AT",
+      "https://wa.link/875c39",
+      "https://www.linkedin.com/in/praise-oke-673a7823a/"
+    ],
+    "jobTitle": "Full-Stack Web & Mobile Developer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Freelance / Independent"
+    }
+  }
+  </script>
 </head>
+
 <body>
     <div class="page-loader">
         <div class="loader">
