--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="Praise-Oke-CV.pdf" download>Download CV</a></li>
                 </ul>
             </nav>
+
             <div class="nav-right">
                 <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
                     <i class="fas fa-moon"></i>
@@ -109,6 +111,7 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="Praise-Oke-CV.pdf" download>Download CV</a></li>
                 </ul>
             </nav>
             <div class="mobile-footer">
@@ -132,9 +135,9 @@
                     <span class="hero-eyebrow">Full Stack Developer</span>
                     <h1 class="hero-title">
                         <span class="hero-name">Praise Oke</span>
-                        <span class="hero-job">Building <mark>exceptional</mark> digital experiences</span>
+                        <span class="hero-job">I build modern <mark>apps and websites</mark> that grow businesses.</span>
                     </h1>
-                    <p class="hero-description">I design and develop applications that deliver elegant solutions with cutting-edge technologies.</p>
+                    <p class="hero-description">From sleek websites to full-scale platforms, I turn your ideas into products people love to use. I focus on clean design, smooth performance, and results that make a difference.</p>
                     <div class="hero-cta">
                         <a href="#experience" class="btn btn-primary">View My Experience</a>
                         <a href="#contact" class="btn btn-secondary">Get In Touch</a>
