--- a/index.html
+++ b/index.html
@@ -160,7 +160,18 @@
             </div>
         </section>
 
-                <!-- current project section -->
+        <!-- GasGuru project section -->
+        <section class="current-project">
+            <div class="project-label">Featured Project</div>
+            <h3>GasGuru Telegram Bot</h3>
+            <p>Built GasGuru — a real-time cryptocurrency tracking bot that provides instant Ethereum gas fees and token price information. This bot features interactive menus, multiple token support (ETH, BTC, SOL, MATIC, BNB, XRP, DOGE, ADA), and seamless integration with CoinGecko API for accurate price data. Users can easily monitor gas prices and track their favorite cryptocurrencies directly within Telegram.</p>
+            <div class="project-cta">
+                <a href="https://t.me/thegasguru_bot" target="_blank" rel="noopener" class="btn btn-primary">
+                    <i class="fas fa-external-link-alt"></i>
+                    Try the Bot
+                </a>
+            </div>
+        </section>
             <!-- EtherLens project section -->
             <section class="current-project">
                 <div class="project-label">Featured Project</div>
@@ -179,7 +190,7 @@
         <section class="current-project">
             <div class="project-label">Featured Project</div>
             <h3>AI-Native Chat Platform Development</h3>
-            <p>Building Chatz — a next-gen conversational platform designed for fast, intelligent, and engaging interactions. This MVP leverages Retrieval-Augmented Generation (RAG) and Qdrant for high-speed, context-aware chatting, integrates natural-feeling chat-to-chat flows, and features hyper-realistic text-to-speech that sounds truly human.</p>
+            <p>Built Chatz — a next-gen conversational platform designed for fast, intelligent, and engaging interactions. This MVP leverages Retrieval-Augmented Generation (RAG) and Qdrant for high-speed, context-aware chatting, integrates natural-feeling chat-to-chat flows, and features hyper-realistic text-to-speech that sounds truly human.</p>
             <div class="project-cta">
                 <a href="https://chatz-frontend.onrender.com/" target="_blank" rel="noopener" class="btn btn-primary">
                     <i class="fas fa-external-link-alt"></i>
