--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -188,6 +188,29 @@
                                         <article class="project-card project-card--featured">
                         <div class="project-card__header">
                             <div class="project-card__icon">
+                                <i class="ri-telegram-line"></i>
+                            </div>
+                            <div class="project-card__links">
+                                <a href="https://linkly.joat.website" class="project-card__link" target="_blank" rel="noopener noreferrer" aria-label="View Linkly">
+                                    <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="project-card__content">
+                            <h3 class="project-card__title">Linkly</h3>
+                            <p class="project-card__description">
+                                Built Linkly — Linkly is a modern full-stack web application that provides users with powerful tools to manage their digital presence and share multiple links efficiently. Built with a sleek, animated frontend and robust backend API, it combines URL shortening capabilities with personalized profile pages featuring multiple social and professional links in an elegant masonry layout.                            <div class="project-card__technologies">
+                                <span class="tech-badge">GO</span>
+                                <span class="tech-badge">Fiber</span>
+                                <span class="tech-badge">Next.js</span>
+                                <span class="tech-badge">TypeScript</span>
+                                <span class="tech-badge">MongoDB</span>
+                            </div>
+                        </div>
+                    </article>
+                                        <article class="project-card project-card--featured">
+                        <div class="project-card__header">
+                            <div class="project-card__icon">
                                 <i class="ri-book-line"></i>
                             </div>
                             <div class="project-card__links">
@@ -414,6 +437,8 @@
                             <span class="tech-badge">Node.js</span>
                             <span class="tech-badge">PHP</span>
                             <span class="tech-badge">GO</span>
+                            <span class="tech-badge">Fiber</span>
+
                             <span class="tech-badge">Rust</span>
                         </div>
                     </div>
@@ -422,6 +447,7 @@
                         <h3 class="skill-category__title">Mobile Development</h3>
                         <div class="skill-category__badges">
                             <span class="tech-badge">React Native</span>
+                            <span class="tech-badge">Lynx</span>
                         </div>
                     </div>
 
