--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,19 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Praise Oke (JOAT) - Software Engineer">
-    <meta name="keywords" content="Praise Oke, JOAT, Software Engineer, Software Developer, Environmental Engineering, Full Stack, Web Development, Nigeria, Lagos">
+    <meta name="description" content="Praise Oke (JOAT) - Software Engineer specializing in Full Stack Development, Web Applications, and Modern Technologies. Portfolio of projects and expertise.">
+    <meta name="keywords" content="Praise Oke, JOAT, Software Engineer, Full Stack Developer, Web Development, Environmental Engineering, Nigeria, Lagos, Portfolio">
     <meta name="author" content="Praise Oke">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Praise Oke - Full Stack Developer Portfolio">
-    <meta property="og:description" content="Full Stack Developer specializing in modern web applications and innovative solutions">
+    <meta property="og:description" content="Full Stack Developer specializing in modern web applications and innovative solutions. Portfolio by Praise Oke (JOAT).">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://1joat.github.com">
+    <meta property="og:url" content="https://joat.website/">
+    <meta property="og:image" content="https://joat.website/profile.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Praise Oke - Full Stack Developer">
-    <meta name="twitter:description" content="Building modern apps and websites that grow businesses">
-    
-    <title>Praise Oke - Full Stack Developer | Modern Web Solutions</title>
+    <meta name="twitter:description" content="Building modern apps and websites that grow businesses. Portfolio by Praise Oke (JOAT).">
+
+    <link rel="canonical" href="https://joat.website/">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Praise Oke",
+      "alternateName": "JOAT",
+      "jobTitle": "Software Engineer",
+      "image": "https://joat.website/profile.jpg",
+      "url": "https://joat.website/",
+      "sameAs": [
+        "https://github.com/1JOAT",
+        "https://x.com/1J0AT",
+        "https://www.linkedin.com/in/praise-oke-673a7823a/",
+        "https://wa.link/875c39"
+      ],
+      "description": "Full Stack Developer specializing in modern web applications and innovative solutions. Based in Nigeria, Lagos.",
+      "knowsAbout": [
+        "Full Stack Development",
+        "Web Development",
+        "Software Engineering",
+        "TypeScript",
+        "JavaScript",
+        "React",
+        "Next.js",
+        "Node.js",
+        "GO",
+        "MongoDB",
+        "PostgreSQL"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "Nigeria"
+      }
+    }
+    </script>
+
+    <title>Praise Oke - Full Stack Developer | JOAT Portfolio</title>
     
     <link rel="icon" type="image/jpeg" href="profile.jpg">
     <link rel="apple-touch-icon" href="profile.jpg">
