--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -415,9 +415,9 @@
                     <p>
                         This self-taught journey has taught me the value of continuous learning and adaptability. I'm constantly exploring cutting-edge technologies and frameworks, always looking for ways to improve performance and enhance user experience. My approach combines technical excellence with strategic thinking, allowing me to build solutions that are both powerful and sustainable.
                     </p>
-                    <p>
+                    <!-- <p>
                         Beyond development, I'm passionate about creating tools that enhance productivity and simplify complex tasks. This led me to develop TabZen, a Chrome extension that revolutionizes browser tab management, making it more intuitive and efficient for users worldwide.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </section>
@@ -462,11 +462,11 @@
                     <div class="skill-category">
                         <h3 class="skill-category__title">Frontend Development</h3>
                         <div class="skill-category__badges">
-                            <span class="tech-badge">HTML/CSS</span>
                             <span class="tech-badge">TypeScript</span>
                             <span class="tech-badge">JavaScript</span>
                             <span class="tech-badge">React</span>
                             <span class="tech-badge">Next.js</span>
+                            <span class="tech-badge">HTML/CSS</span>
                         </div>
                     </div>
 
@@ -505,7 +505,7 @@
                         <h3 class="skill-category__title">Tools & Version Control</h3>
                         <div class="skill-category__badges">
                             <span class="tech-badge">Git</span>
-                            <span class="tech-badge">GitHub</span>
+                            <span class="tech-badge">Redux</span>                            
                             <span class="tech-badge">Cline</span>
                             <span class="tech-badge">VS Code</span>
                             <span class="tech-badge">Postman</span>
