add blockchain project

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -224,6 +224,33 @@
                 </div>
                 
                 <div class="projects__grid">
+
+                    <article class="project-card project-card--featured">
+    <div class="project-card__header">
+        <div class="project-card__icon">
+            <i class="ri-bit-coin-line"></i>
+        </div>
+        <div class="project-card__links">
+            <a href="https://blockchain.joat.website" class="project-card__link" target="_blank" rel="noopener noreferrer" aria-label="View Blockchain Explorer">
+                <i class="ri-external-link-line"></i>
+            </a>
+        </div>
+    </div>
+    <div class="project-card__content">
+        <h3 class="project-card__title">Blockchain Explorer</h3>
+        <p class="project-card__description">
+            Built Blockchain Explorer — A full-stack blockchain implementation with a cyberpunk-themed frontend and high-performance Rust backend. Experience real-time blockchain operations, proof-of-work mining, and transaction processing in a modern, responsive interface featuring live blockchain visualization, interactive mining, and real-time balance tracking.
+        </p>
+        <div class="project-card__technologies">
+            <span class="tech-badge">Rust</span>
+            <span class="tech-badge">Axum</span>
+            <span class="tech-badge">React</span>
+            <span class="tech-badge">TypeScript</span>
+            <span class="tech-badge">Vite</span>
+        </div>
+    </div>
+</article>
+
                                         <article class="project-card project-card--featured">
                         <div class="project-card__header">
                             <div class="project-card__icon">
