--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -617,7 +617,7 @@
             
             <div class="footer__bottom">
                 <p class="footer__copyright">
-                    © 2025 Praise Oke. All rights reserved.
+                    © 2025-2026 Praise Oke. All rights reserved.
                 </p>
             </div>
         </div>
