--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -224,34 +224,59 @@
                 </div>
                 
                 <div class="projects__grid">
+                    <article class="project-card project-card--featured">
+                        <div class="project-card__header">
+                            <div class="project-card__icon">
+                                <i class="ri-golang-line"></i>
+                            </div>
+                            <div class="project-card__links">
+                                <a href="https://github.com/1JOAT/gob" class="project-card__link" target="_blank" rel="noopener noreferrer" aria-label="View Gob Framework">
+                                    <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="project-card__content">
+                            <h3 class="project-card__title">Gob Framework</h3>
+                            <p class="project-card__description">
+                                Built Gob Framework — A professional, high-performance Go CLI framework for building web applications with real-time hot-reloading and built-in MongoDB support. Experience modern Go development with professional scaffolding, automated project generation, and streamlined development workflows featuring instant code reloading, MongoDB integration, and comprehensive CLI tooling.
+                            </p>
+                            <div class="project-card__technologies">
+                                <span class="tech-badge">Go</span>
+                                <span class="tech-badge">Cobra</span>
+                                <span class="tech-badge">MongoDB</span>
+                                <span class="tech-badge">CLI</span>
+                                <span class="tech-badge">Scaffolding</span>
+                            </div>
+                        </div>
+                    </article>
 
                     <article class="project-card project-card--featured">
-    <div class="project-card__header">
-        <div class="project-card__icon">
-            <i class="ri-bit-coin-line"></i>
-        </div>
-        <div class="project-card__links">
-            <a href="https://blockchain.joat.website" class="project-card__link" target="_blank" rel="noopener noreferrer" aria-label="View Blockchain Explorer">
-                <i class="ri-external-link-line"></i>
-            </a>
-        </div>
-    </div>
-    <div class="project-card__content">
-        <h3 class="project-card__title">Blockchain Explorer</h3>
-        <p class="project-card__description">
-            Built Blockchain Explorer — A full-stack blockchain implementation with a cyberpunk-themed frontend and high-performance Rust backend. Experience real-time blockchain operations, proof-of-work mining, and transaction processing in a modern, responsive interface featuring live blockchain visualization, interactive mining, and real-time balance tracking.
-        </p>
-        <div class="project-card__technologies">
-            <span class="tech-badge">Rust</span>
-            <span class="tech-badge">Axum</span>
-            <span class="tech-badge">React</span>
-            <span class="tech-badge">TypeScript</span>
-            <span class="tech-badge">Vite</span>
-        </div>
-    </div>
-</article>
+                        <div class="project-card__header">
+                            <div class="project-card__icon">
+                                <i class="ri-bit-coin-line"></i>
+                            </div>
+                            <div class="project-card__links">
+                                <a href="https://blockchain.joat.website" class="project-card__link" target="_blank" rel="noopener noreferrer" aria-label="View Blockchain Explorer">
+                                    <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="project-card__content">
+                            <h3 class="project-card__title">Blockchain Explorer</h3>
+                            <p class="project-card__description">
+                                Built Blockchain Explorer — A full-stack blockchain implementation with a cyberpunk-themed frontend and high-performance Rust backend. Experience real-time blockchain operations, proof-of-work mining, and transaction processing in a modern, responsive interface featuring live blockchain visualization, interactive mining, and real-time balance tracking.
+                            </p>
+                            <div class="project-card__technologies">
+                                <span class="tech-badge">Rust</span>
+                                <span class="tech-badge">Axum</span>
+                                <span class="tech-badge">React</span>
+                                <span class="tech-badge">TypeScript</span>
+                                <span class="tech-badge">Vite</span>
+                            </div>
+                        </div>
+                    </article>
 
-                                        <article class="project-card project-card--featured">
+                    <article class="project-card project-card--featured">
                         <div class="project-card__header">
                             <div class="project-card__icon">
                                 <i class="ri-telegram-line"></i>
@@ -274,7 +299,7 @@
                             </div>
                         </div>
                     </article>
-                                        <article class="project-card project-card--featured">
+                    <article class="project-card project-card--featured">
                         <div class="project-card__header">
                             <div class="project-card__icon">
                                 <i class="ri-book-line"></i>
@@ -299,7 +324,7 @@
                         </div>
                     </article>
 
-                                        <article class="project-card project-card--featured">
+                    <article class="project-card project-card--featured">
                         <div class="project-card__header">
                             <div class="project-card__icon">
                                 <i class="ri-telegram-line"></i>
