Added progress update

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -148,6 +148,24 @@
                     <h2 class="section__title">Professional Experience</h2>
                     <p class="section__subtitle">My journey in tech</p>
                 </div>
+                 <div class="timeline__item">
+                    <div class="timeline__marker"></div>
+                    <div class="timeline__content">
+                        <div class="timeline__header">
+                            <h3 class="timeline__title">Software Developer</h3>
+                            <div class="timeline__company">Applic AI</div>
+                            <div class="timeline__period">December 2025 - February 2026</div>
+                        </div>
+                        <!-- <p class="timeline__description">
+                            Working as a software developer focusing on building scalable applications and leading development teams. Currently developing an advanced algorithm to optimize user experiences and system performance.
+                        </p> -->
+                        <div class="timeline__technologies">
+                            <span class="tech-badge">Typescript</span>
+                            <span class="tech-badge">Manifest</span>
+                            <span class="tech-badge">Chrome runtime</span>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="experience__timeline">
                     <div class="timeline">
