--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Full Stack Developer specializing in modern web applications and innovative solutions. Portfolio by Praise Oke (JOAT).">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://joat.website/">
-    <meta property="og:image" content="https://joat.website/profile.jpg">
+    <meta property="og:image" content="https://joat.website/github-p.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Praise Oke - Full Stack Developer">
     <meta name="twitter:description" content="Building modern apps and websites that grow businesses. Portfolio by Praise Oke (JOAT).">
@@ -25,7 +25,7 @@
       "name": "Praise Oke",
       "alternateName": "JOAT",
       "jobTitle": "Software Engineer",
-      "image": "https://joat.website/profile.jpg",
+      "image": "https://joat.website/github-p.png",
       "url": "https://joat.website/",
       "sameAs": [
         "https://github.com/1JOAT",
@@ -56,9 +56,9 @@
 
     <title>Praise Oke - Full Stack Developer | JOAT Portfolio</title>
     
-    <link rel="icon" type="image/jpeg" href="profile.jpg">
-    <link rel="apple-touch-icon" href="profile.jpg">
-    <meta name="msapplication-TileImage" content="profile.jpg">
+    <link rel="icon" type="image/jpeg" href="github-p.png">
+    <link rel="apple-touch-icon" href="github-p.png">
+    <meta name="msapplication-TileImage" content="github-p.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -134,7 +134,7 @@
                 <div class="hero__visual">
                     <div class="hero__image-wrapper">
                         <div class="hero__image-bg">
-                            <img src="profile.jpg" alt="Praise Oke - Full Stack Developer" class="hero__profile-image">
+                            <img src="github-p.png" alt="Praise Oke - Full Stack Developer" class="hero__profile-image">
                         </div>
                     </div>
                 </div>
